2010-05-23  Matti Aarnio - OH2MQK - KP20NG  <oh2mqk@sral.fi>

	* interface.c:
	    Corrections on <kiss-subif> definitions, in particular
	    the aliases.
	    Fixed Tx-IGate workhorse interface_receive_3rdparty()'s
	    packet address header construction.

	* digipeater.c, aprx.h:
	    APRSIS specific via-path parameter parsing fixes, additional
	    debugging outputs, config error detection outputs.

	* netax25.c, ax25.c:
	    Debugging outputs.

	* ttyreader.c, aprx.h:
	    Debugging outputs.
	    Special KISS subtype "RFCRC" - received KISS frames have
	    two RANDOM bytes at their end. Looks like CRC16, but is
	    random junk.

	* erlang.c:
	    Debug printout.

	* beacon.c:
	    When an interface has no callsign, do not send beacon to it.
	    (It could be tty master interface which has multiple KISS
	     sub-interfaces.)

	* igate.c:
	    Parse packet to be tx-igated for acceptable address syntaxes.
	    Debug printouts.

2010-05-16  Matti Aarnio - OH2MQK - KP20NG  <oh2mqk@sral.fi>

	* aprsis.c, aprx.conf.in, aprx.8.in, doc/aprx-manual.odt:
	    Emphasize that <aprsis>'s login parameter is to be
	    set ONLY when it needs to be different than mycall
	    value.  (But tolerate also '$mycall' alias.)

	* aprx.c:
	    Update internal tocall default to 'APRX1F'.

	* interface.c, digipeater.c:
	    Tx-iGate fixes for case where outgoing packet has no
	    VIA field(s).  System saw that "requested hops = 0,
	    done hops = 0 -> no need to send out".

	* parse_aprs.c:
	    Make sure that all things creating debug output are
	    followed by a "\n".

	* igate.c:
	    Relax station callsign format rules inside a received
	    3rd-party frame.

2010-05-13  Matti Aarnio - OH2MQK - KP20NG  <oh2mqk@sral.fi>

	* interface.c:
	    Under all situations, fill in pbuf_t->dstcall_end.

	* debian/rules:
	    Do not strip resulting objects. We want debug symbols!

	* digipeater.c:
	    Improve config error reporting.

	* config.c: